# agent-shell-matrix-proxy

./: .env.example  .gitignore  IMPLEMENTATION.md  IMPLEMENTATION.org  QUICK_START.md  README.md  README.org  agent-shell-matrix-handoff.el  agent-shell-matrix-handoff.elc  agent-shell-matrix-proxy.service.example  env.template  pyproject.toml  run.sh
src/matrix_proxy_bot/: __init__.py  __main__.py  bot.py  bot.py.backup  config.py  cross_signing.py  db.py
tests/: CURL_TESTS.md  README.md  comprehensive_tests.sh  curl_tests.sh  test_command_parsing.py  test_commands_and_ttl.py  test_endpoints.py  test_handoff_flow.py  test_integration.py  test_unit.py  test_webhook_api.py
