[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-shell-matrix-proxy"
version = "0.1.0"
description = "Matrix ↔ Agent-Shell webhook relay bot"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Edd Wilder-James", email = "edd@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "matrix-nio>=0.24.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.114.0",
    "uvicorn>=0.27.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
e2e = ["matrix-nio[e2e]>=0.24.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_proxy_bot"]
